feat: enhanced AAR reporting with paths, projectiles, mob tracking, and rich viewer
Adds per-life path rendering with teleport jump markers and dimension entry
markers, game mode tracking (spectator shown as dashed/desaturated paths),
projectile tracking for players and hostile mobs, proximity-based mob aggro
tracking (including creepers), end crystal and dragon health sampling, spawn
point deduplication, food/health delta recording, potion effect lifecycle
events, shield block events, totem of undying events, crafting milestones
(key items only), and rollback buffer with /ph rollback command.

Switches storage to SQLite only with normalized schema and fully-batched
path point writes. Viewer rewritten in Preact + htm with unified timeline,
chip filters, per-player status panel with heart/hunger rendering, avatar
heads, and self-contained HTML export.

Fixes shield block false positives (DamageCause.BLOCKING required), food
healthBefore capture, PlayerSetSpawnEvent deprecated import, and writePaths
per-row SQL round-trip replaced with full batch execution.

Co-authored-by: Claude <noreply@anthropic.com>
Co-authored-by: ChatGPT <noreply@openai.com>